<resources>
	<string name="app_name">LaptimeLogger</string>
	<string name="action_session_summary">セッションサマリー</string>
	<string name="action_user_info">ユーザー情報</string>
	<string name="action_session_info">走行データ</string>
	<string name="action_app_settings">設定</string>
	<string name="action_speed_calculator">速度計算機</string>
	<string name="action_mixture_calculator">混合比計算機</string>
	<string name="action_final_ratio">ファイナル計算機</string>
	<string name="action_track_best_fragment">ベストタイム</string>
	<string name="action_track_time_history">タイム履歴</string>
	<string name="action_total_distance">走行距離</string>
	<string name="action_maintenance_log">メンテナンスログ</string>
	<string name="action_edit_maintenance_item">アイテムの編集</string>
	<!-- Strings used for fragments for navigation -->
	<string name="activities_fragment_label">走行日一覧</string>
	<string name="login_fragment_label">ログイン</string>
	<string name="label_user_info_fragment">ユーザー情報</string>
	<string name="label_app_info_fragment">設定</string>
	<string name="label_track_best_fragment">ベストタイム</string>
	<string name="label_total_distance">走行距離</string>
	<string name="label_error_log">エラーログ</string>
	<string name="label_fuel_consumption_ist">燃費データ</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="menu_sort_by_best_lap">ベストタイム順</string>
	<string name="menu_sort_by_date">日付順</string>

	<string name="label_login_button">LOGIN</string>
	<string name="hint_user_name">user name</string>
	<string name="hint_password">password</string>
	<string name="login_failed">ログインに失敗しました</string>
	<string name="get_activities_failed">取得に失敗しました</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

	<string name="format_access_token">■ACCESS_TOKEN\n%s</string>
	<string name="format_token_type">■TOKEN_TYPE\n%s</string>
	<string name="format_expires_in">■EXPIRES_IN\n%s</string>
	<string name="format_user_id">■USER_ID\n%s</string>
	<string name="format_issued">■ISSUED\n%s</string>
	<string name="format_expires">■EXPIRES\n%s</string>
	<string name="format_session_title">Session %s</string>
	<string name="format_activity_info_total_laps">%s 周</string>
	<string name="format_activity_info_total_distance">%s km</string>
	<string name="format_total_distance_training_count">%d 回</string>
	<string name="format_summary_list_lap_count">%d 周</string>
	<string name="format_practice_by_track_list_lap_count">%d 周</string>

	<string name="label_session_info_title_description">備考</string>
	<string name="label_session_info_save_button">保存</string>
	<string name="label_session_info_fuel_calc_button">計算</string>
	<string name="label_session_info_fuel_net_hint">消費燃料（cc）</string>
	<string name="label_session_info_clear_button">クリア</string>
	<string name="label_session_info_apply_weather">気象データ取得</string>
	<string name="label_session_info_title_temperature">気温</string>
	<string name="label_session_info_title_pressure">気圧</string>
	<string name="label_session_info_title_humidity">湿度</string>
	<string name="label_session_info_hint_temperature">°C</string>
	<string name="label_session_info_hint_pressure">hp</string>
	<string name="label_session_info_hint_humidity">%</string>
	<string name="label_session_info_hint_description">備考</string>
	<string name="label_session_info_hint_event_name">イベント名</string>
	<string name="label_practice_result_section_session_info">セッションメモ</string>
	<string name="label_session_info_title_average">平均タイム</string>
	<string name="label_session_info_title_median">中間タイム</string>
	<string name="label_activity_info_title_lap_count">周回数</string>
	<string name="label_activity_info_title_total_distance">走行距離</string>
	<string name="label_activity_info_title_total_time">走行時間</string>
	<string name="label_activity_info_title_fuel_consumption">燃費（cc/周）</string>
	<string name="label_activity_info_title_best_lap">ベストラップ</string>
	<string name="label_session_list_title_best_lap">ベスト</string>
	<string name="label_session_list_title_lap_count">周回数</string>
	<string name="label_app_info_title_app_version">アプリバージョン：</string>
	<string name="label_app_info_title_show_practice_results_as_separate">セッションを分割して表示</string>
	<string name="label_use_compose">コンポーズを使用</string>
	<string name="label_app_info_title_allow_session_auto_loading">セッションを自動更新</string>
	<string name="label_app_info_title_show_speed_bar">ラップタイムの下にグラフバーを表示</string>
	<string name="label_app_info_title_show_sector_time">セクタータイムを表示</string>
	<string name="label_app_info_title_settings">設定</string>
	<string name="label_app_info_title_debug_info">デバッグ機能</string>
	<string name="label_show_error_log">エラーログを表示</string>
	<string name="label_total_distance_all">合計</string>
	<string name="label_fragment_speed_calculator">速度計算機</string>
	<string name="speed_calc_drive">ドライブ</string>
	<string name="speed_calc_driven">ドリブン</string>
	<string name="speed_calc_rpm">回転数</string>
	<string name="speed_calc_circumference">タイヤ外周</string>
	<string name="speed_calc_final_ratio">ギヤ比</string>
	<string name="speed_calc_speed">速度</string>
	<string name="mixture_calc_current_total_fuel">今あるガソリンの総量</string>
	<string name="mixture_calc_current_mix_ratio">今あるガソリンの混合比</string>
	<string name="mixture_calc_added_fuel">追加するガソリンの量</string>
	<string name="mixture_calc_dest_mix_ratio">最終的な混合比</string>
	<string name="mixture_calc_added_oil">追加すべきオイルの量</string>
	<string name="mixture_calc_hint_cc">cc</string>
	<string name="mixture_calc_hint_ratio">25</string>
	<string name="calculate">計算</string>
	<string name="clearCells">セルをクリア</string>
	<string name="drive_min">ドライブ：下限</string>
	<string name="drive_max">ドライブ：上限</string>
	<string name="driven_min">ドリブン：下限</string>
	<string name="driven_max">ドリブン：上限</string>
	<string name="maintenance_log_issue_date">実施日</string>
	<string name="maintenance_item">メンテナンス対象</string>
	<string name="running_time">ランニングタイム</string>
	<string name="maintenance_log_description">詳細</string>
	<string name="label_ok">OK</string>
	<string name="label_save">保存</string>
	<string name="label_create">作成</string>
	<string name="label_delete">削除</string>
	<string name="label_camera">カメラ</string>
	<string name="label_photo">写真</string>
</resources>