<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="jp.ceed.android.mylapslogger.MainActivity">
	<item
		android:id="@+id/action_session_summary"
		android:orderInCategory="100"
		android:title="@string/action_session_summary"
		app:showAsAction="never"
		android:visible="false"/>

	<item android:id="@+id/action_user_info"
		android:orderInCategory="100"
		android:title="@string/action_user_info"
		app:showAsAction="never"
		android:visible="false"/>
	<item
		android:id="@+id/action_session_info"
		android:orderInCategory="100"
		android:title="@string/action_session_info"
		app:showAsAction="never"
		android:visible="false"/>

	<item
		android:id="@+id/action_app_settings"
		android:orderInCategory="100"
		android:title="@string/action_app_settings"
		app:showAsAction="never"
		android:visible="false"/>

	<item
		android:id="@+id/action_time_history"
		android:orderInCategory="100"
		android:title="@string/action_track_time_history"
		app:showAsAction="never"
		android:visible="false"/>

	<item
		android:id="@+id/action_total_distance"
		android:orderInCategory="100"
		android:title="@string/action_total_distance"
		app:showAsAction="never"
		android:visible="false"/>

	<item
		android:id="@+id/action_fuel_consumption_list"
		android:orderInCategory="100"
		android:title="@string/label_fuel_consumption_ist"
		app:showAsAction="never"
		android:visible="false"/>

	<item
		android:id="@+id/action_sort_by_best_time"
		android:orderInCategory="100"
		android:title="@string/menu_sort_by_best_lap"
		app:showAsAction="never"
		android:visible="false"/>

	<item
		android:id="@+id/action_sort_by_date"
		android:orderInCategory="100"
		android:title="@string/menu_sort_by_date"
		app:showAsAction="never"
		android:visible="false"/>

	<item
		android:id="@+id/action_edit_maintenance_item"
		android:orderInCategory="100"
		android:title="@string/action_edit_maintenance_item"
		android:visible="false"/>
</menu>