<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="jp.ceed.android.mylapslogger.viewModel.ActivityInfoFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10sp">

		<TextView
			android:id="@+id/bestLapTitleTextView"
			android:layout_width="@dimen/header_width_l"
			android:layout_height="wrap_content"
			style="@style/activity_info_text"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:text="@string/label_activity_info_title_best_lap"/>

		<TextView
			android:layout_width="0sp"
			android:layout_height="wrap_content"
			style="@style/activity_info_text"
			app:layout_constraintStart_toEndOf="@id/bestLapTitleTextView"
			app:layout_constraintBottom_toBottomOf="@id/bestLapTitleTextView"
			android:text="@{viewModel.bestLap}"/>

		<TextView
			android:id="@+id/totalLapTitleTexView"
			android:layout_width="@dimen/header_width_l"
			android:layout_height="wrap_content"
			style="@style/activity_info_text"
			app:layout_constraintTop_toBottomOf="@id/bestLapTitleTextView"
			app:layout_constraintStart_toStartOf="parent"
			android:text="@string/label_activity_info_title_lap_count"/>

		<TextView
			android:id="@+id/totalLapTextView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			style="@style/activity_info_text"
			app:layout_constraintBottom_toBottomOf="@id/totalLapTitleTexView"
			app:layout_constraintStart_toEndOf="@id/totalLapTitleTexView"
			android:text="@{@string/format_activity_info_total_laps(viewModel.totalLap)}"/>

		<TextView
			android:id="@+id/totalDistanceTitleTextView"
			android:layout_width="@dimen/header_width_l"
			android:layout_height="wrap_content"
			style="@style/activity_info_text"
			app:layout_constraintTop_toBottomOf="@id/totalLapTitleTexView"
			app:layout_constraintStart_toStartOf="parent"
			android:text="@string/label_activity_info_title_total_distance" />

		<TextView
			android:id="@+id/totalDistanceTextView"
			android:layout_width="0sp"
			android:layout_height="wrap_content"
			style="@style/activity_info_text"
			app:layout_constraintStart_toEndOf="@id/totalDistanceTitleTextView"
			app:layout_constraintBottom_toBottomOf="@id/totalDistanceTitleTextView"
			android:text="@{@string/format_activity_info_total_distance(viewModel.totalDistance)}"/>

		<TextView
			android:id="@+id/totalTimeTitleTextView"
			android:layout_width="@dimen/header_width_l"
			android:layout_height="wrap_content"
			style="@style/activity_info_text"
			app:layout_constraintTop_toBottomOf="@id/totalDistanceTitleTextView"
			app:layout_constraintStart_toStartOf="parent"
			android:text="@string/label_activity_info_title_total_time"/>

		<TextView
			android:id="@+id/totalTimeTextView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			style="@style/activity_info_text"
			app:layout_constraintStart_toEndOf="@id/totalTimeTitleTextView"
			app:layout_constraintBottom_toBottomOf="@id/totalTimeTitleTextView"
			android:text="@{viewModel.totalTime}"/>

		<TextView
			android:id="@+id/fuelConsumptionTitleTextView"
			android:layout_width="@dimen/header_width_l"
			android:layout_height="wrap_content"
			style="@style/activity_info_text"
			app:layout_constraintTop_toBottomOf="@id/totalTimeTitleTextView"
			app:layout_constraintStart_toStartOf="parent"
			android:text="@string/label_activity_info_title_fuel_consumption"/>

		<TextView
			android:id="@+id/fuelConsumptionTextView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			style="@style/activity_info_text"
			app:layout_constraintStart_toEndOf="@id/fuelConsumptionTitleTextView"
			app:layout_constraintBottom_toBottomOf="@id/fuelConsumptionTitleTextView"
			android:text="@{viewModel.fuelConsumption}"/>

		<EditText
			android:id="@+id/spendFuelEditText"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/fuelConsumptionTitleTextView"
			app:layout_constraintStart_toStartOf="parent"
			android:hint="@string/label_session_info_fuel_net_hint"
			android:inputType="number"
			android:text="@={viewModel.spendFuel}"/>

		<Button
			android:id="@+id/fuelCalculateButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/spendFuelEditText"
			app:layout_constraintBottom_toBottomOf="@id/spendFuelEditText"
			android:text="@string/label_session_info_fuel_calc_button"
			android:onClick="@{() -> viewModel.calculateFuelConsumption()}"/>

		<EditText
			android:id="@+id/eventNameEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:lines="1"
			android:hint="@string/label_session_info_hint_event_name"
			app:layout_constraintTop_toBottomOf="@id/spendFuelEditText"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:text="@={viewModel.eventName}"/>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="6"
			android:gravity="top"
			android:hint="@string/label_session_info_hint_description"
            app:layout_constraintTop_toBottomOf="@id/eventNameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@={viewModel.description}"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/descriptionEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/label_session_info_save_button"
            android:onClick="@{() -> viewModel.saveSessionInfo()}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>